feat: readable stream, sessions and vars

--- a/examples/react-chat/src/Chat.css
+++ b/examples/react-chat/src/Chat.css
@@ -40,10 +40,7 @@ button {
   gap: 15px;
 }
 
-.feed-wrap {
-  overflow-y: auto;
-}
-
+.indicator,
 .feed,
 form {
   margin: 0 auto;
@@ -51,10 +48,28 @@ form {
   width: 100%;
 }
 
+.indicator button {
+  visibility: hidden;
+}
+.indicator:hover button {
+  visibility: visible;
+}
+
+.feed-wrap {
+  overflow-y: auto;
+}
+
+.feed-wrap,
+.feed {
+  height: 100%;
+}
+
 .feed {
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  position: relative;
 }
 
 .message {
@@ -87,6 +102,22 @@ form {
   }
 }
 
+.stop-button {
+  position: sticky;
+  left: 0;
+  right: 0;
+  bottom: 10px;
+
+  margin: 0 auto;
+  padding: 5px 10px;
+  width: fit-content;
+  background: rgb(46, 46, 46);
+}
+
+.stop-button:hover {
+  filter: invert();
+}
+
 form {
   border: 2px solid rgb(148, 148, 148);
   display: flex;
@@ -102,6 +133,7 @@ textarea,
 button {
   border: none;
   outline: none;
+  cursor: pointer;
 }
 
 textarea {
